Fixed several code smells after Java17 switch