@@ -6,7 +6,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import com.logicaldoc.gui.common.client.beans.GUIReadingRequest;
 
@@ -80,8 +79,7 @@ public class ReadingRequestController {
 	public long[] getUnconfirmedReadingIds(long docId) {
 		long[] readingIds = new long[0];
 		if (isReadingConfirmRequired(docId)) {
-			List<Long> values = unconfirmedReadings.get(docId).stream().map(r -> r.getId())
-					.collect(Collectors.toList());
+			List<Long> values = unconfirmedReadings.get(docId).stream().map(r -> r.getId()).toList();
 			readingIds = values.stream().mapToLong(l -> l).toArray();
 		}
 		return readingIds;
